--- a/scr/utils/template/resetPassword.handlebars
+++ b/scr/utils/template/resetPassword.handlebars
@@ -6,7 +6,8 @@
 		</style>
 	</head>
 	<body>
-		<p>Hi {{name}},</p>
-		<p>Your password has been changed successfully</p>
+		<p>Hello {{name}},</p>
+		<p>Your password on your Zollege Quizlet account has been changed
+			successfully!</p>
 	</body>
 </html>
