--- a/scr/utils/template/requestResetPassword.handlebars
+++ b/scr/utils/template/requestResetPassword.handlebars
@@ -6,8 +6,8 @@
 		</style>
 	</head>
 	<body>
-		<p>Hi {{name}},</p>
-		<p>You requested to reset your password.</p>
+		<p>Hello {{name}},</p>
+		<p>You requested to reset your password for your Zollege Quizlet account.</p>
 		<p> Please, click the link below to reset your password</p>
 		<a href="https://{{link}}">Reset Password</a>
 	</body>
